[gd_scene load_steps=4 format=2]

[ext_resource path="res://Graphics/Alchemist/Alchemist.png" type="Texture" id=1]
[ext_resource path="res://scripts/AlchemistTable.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 103.5, 93 )

[node name="AlchemistTable" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.15, 0.15 )
polygon = PoolVector2Array( 422, -286.1, 422, -276.9, 382.7, 0, 381, 0, 376, 7, 373.7, 7, -56.3, 331, -58.9, 331, -65, 332.6, -65, 329.9, -197.6, 218.8, -202.5, 239, -182, 260.2, -182, 262.4, -170, 280.4, -170, 283.6, -163, 303.7, -163, 313, -161, 333.9, -161, 342.2, -167.4, 370, -168.7, 370, -177.7, 391, -179, 391, -193, 411, -194.2, 411, -219.2, 435, -221.3, 435, -240.4, 448, -242.6, 448, -273.6, 462, -277.9, 462, -304.7, 469, -317.8, 469, -341, 471.2, -341, 469.9, -370, 467.9, -370, 466.5, -399, 459.6, -399, 458.2, -427, 445.3, -427, 444, -451, 425, -451, 422.7, -466, 405.8, -466, 403.5, -476, 384.5, -476, 379, -482, 354.2, -482, 332.9, -480.8, 320, -479.5, 320, -473.5, 298, -472.2, 298, -461.7, 277, -549, 116.5, -549, 112.3, -554.4, 80, -552.9, 80, -551.9, 58, -550.4, 58, -541.4, 31, -540.1, 31, -526.1, 8, -524.8, 8, -497.8, -20, -495.7, -20, -473.7, -37, -471.5, -37, -441.5, -53, -438.4, -53, -411.4, -63, -407, -63, -381.2, -69, -375.1, -69, -330, -72.1, -330, -70.9, -305, -69.1, -305, -71, -313.3, -140, -310.5, -140, -237.5, -184.8, -298, -252.2, -298, -257.6, -292.1, -267, -289.5, -267, -82.5, -386, -79.1, -386, -16.2, -317.2, 173, -429.1, 173, -430.2, 175, -431.3 )

[node name="Alchemist" type="Sprite" parent="CollisionPolygon2D"]
position = Vector2( 26.667, 20 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 10.5, 16 )
shape = SubResource( 1 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0

[connection signal="body_entered" from="Area2D" to="." method="playerEntered"]
[connection signal="body_exited" from="Area2D" to="." method="playerExited"]
